made player button inactive

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 h1 {
     color:purple
 }
-#player, 
-#dealer {
+#player-board, 
+#dealer-board {
     width: 500;
     height: 400px;
     background-color: steelblue;
