refactored hit and draw

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 h1 {
     color:purple
 }
-#player-board, 
-#dealer-board {
+#player, 
+#dealer {
     width: 500;
     height: 400px;
     background-color: steelblue;
