--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,16 @@ h1 {
 }
 #player, 
 #dealer {
-    width: 500;
-    height: 400px;
+    width: 100%;
+    height: 40%;
     background-color: steelblue;
+    
 }
+img{
+    width: 20%;
+}
+@media only screen and (max-width: 480px) {
+    img {
+      width: 20%;
+    }
+  }
