--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,27 @@ h1 {
 #player, 
 #dealer {
     width: 100%;
-    height: 40%;
+    height: 400px;
     background-color: steelblue;
     
 }
+#red{
+    background-color: red;
+}
+#blue{
+    background-color: blue;
+}
+#green{
+    background-color: green;
+}
+#chips{
+    display: block;
+    float: left;
+}
+/* .chips{
+   
+   
+} */
 img{
     width: 20%;
 }
