--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,17 @@
 h1 {
-    color:purple
+    font-size: 10rem;
+    position: absolute;  
+    text-align: center;
 }
+/* #win-msg{
+     */
+
 #player, 
 #dealer {
     width: 100%;
-    height: 400px;
+    height: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
     background-color: steelblue;
     
 }
@@ -20,13 +27,14 @@ h1 {
 #chips{
     display: block;
     float: left;
+    margin-top: 40px;
 }
 /* .chips{
    
    
 } */
 img{
-    width: 20%;
+    width: 5%
 }
 @media only screen and (max-width: 480px) {
     img {
