--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,18 @@
 h1 {
-    font-size: 10rem;
+    font-size: 5rem;
     position: absolute;  
+   text-align: center;
+}
+body{
     text-align: center;
 }
-/* #win-msg{
-     */
 
 #player, 
 #dealer {
-    width: 100%;
-    height: 100%;
+     width: 100%;
+    height: 100%; 
     padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 50px; 
     background-color: steelblue;
     
 }
