--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,10 @@
-
+h1 {
+    font-size: 3rem;
+    position: absolute;  
+   text-align: center;
+}
 body{
     text-align: center;
-    font-family: 'Raleway', sans-serif;
-}
-
-h1 {
-  margin-top: 40px;
-  margin-bottom: 40px;
-  font-size: 2rem;
-  position: absolute;  
-
-  
 }
 #welcome-modal{
     height: fit-content;
@@ -40,10 +34,8 @@ h1 {
 }
 
 #scores{
-  height:fit-content ;
-  display: block;
     float:left;
-    padding-left: 50px;
+    padding-left: 150px;
     font-size: larger;
 }
 #bet{
