--- a/css/styles.css
+++ b/css/styles.css
@@ -1,51 +1,59 @@
-h1 {
-    font-size: 3rem;
-    position: absolute;  
-   text-align: center;
-}
+
 body{
-    text-align: center;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+}
+
+h1 {
+margin-top: 40px;
+margin-bottom: 40px;
+font-size: 2rem;
+position: absolute;  
+
+
 }
 #welcome-modal{
-    height: fit-content;
-    width: fit-content;
-    display: block;
+  height: fit-content;
+  width: fit-content;
+  display: block;
 }
 #win-msg{
-    position: absolute;
+  position: absolute;
 }
 .blink {
-    animation: blinker 1s linear infinite;
+  animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
   }
-  
-  @keyframes blinker {
-    50% {
-      opacity: 0;
-    }
-  }
+}
 #player, 
 #dealer {
-     width: 100%;
-    height: 100%; 
-    padding-top: 50px;
-    padding-bottom: 50px; 
-    background-color: steelblue;
-    
+   width: 100%;
+  height: 100%; 
+  padding-top: 50px;
+  padding-bottom: 50px; 
+  background-color: steelblue;
+  
 }
 
 #scores{
-    float:left;
-    padding-left: 150px;
-    font-size: larger;
+height:fit-content ;
+display: block;
+  float:left;
+  padding-left: 50px;
+  font-size: larger;
 }
 #bet{
-    margin-top: 20px;
+  margin-top: 20px;
 }
 img{
-    width: 5%
+  width: 5%
 }
 @media only screen and (max-width: 480px) {
-    img {
-      width: 20%;
-    }
+  img {
+    width: 20%;
   }
+}
