--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,11 @@ position: absolute;
 
 
 }
-#welcome-modal{
-  height: fit-content;
-  width: fit-content;
-  display: block;
+#modal{
+  height: 500px;  
+  width: 500px;
+  /* padding: auto;
+  display: block; */
 }
 #win-msg{
   position: absolute;
@@ -29,13 +30,17 @@ position: absolute;
     opacity: 0;
   }
 }
+#board {
+  background-color: steelblue;
+  visibility: hidden;
+
+}
 #player, 
 #dealer {
    width: 100%;
   height: 100%; 
   padding-top: 50px;
   padding-bottom: 50px; 
-  background-color: steelblue;
   
 }
 
