--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,9 @@
 
 body{
   text-align: center;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Press Start 2P', cursive;
+  background-color: dimgray;
+  
 }
 
 h1 {
@@ -10,16 +12,28 @@ margin-bottom: 40px;
 font-size: 2rem;
 position: absolute;  
 
+}
+h2{
+  font-size: 5vw;
+}
 
+button {
+  padding: .5rem;
+  font-family: 'Press Start 2P', cursive;
 }
 #modal{
-  height: 500px;  
-  width: 500px;
-  /* padding: auto;
-  display: block; */
+  /* height: 500px;  
+  width: 500px; */
+  border-width: 1em;
+  margin: 15%;
+  padding: auto;
+  display: block;
 }
-#win-msg{
-  position: absolute;
+
+#msg-box{
+  color: white; 
+  margin-bottom: 15%;
+  
 }
 .blink {
   animation: blinker 1s linear infinite;
@@ -31,17 +45,27 @@ position: absolute;
   }
 }
 #board {
-  background-color: steelblue;
+  text-align: center;
+  margin: 15%;
+  padding: 5%;
+  background-color: green;
+  border-style: solid;
+  border-width: 1em;
   visibility: hidden;
-
 }
 #player, 
 #dealer {
    width: 100%;
   height: 100%; 
   padding-top: 50px;
-  padding-bottom: 50px; 
-  
+  padding-bottom: 50px;  
+}
+#player{
+  background-color: darkred;
+}
+#dealer{
+  background-color: black;
+  color: white;
 }
 
 #scores{
@@ -50,9 +74,10 @@ display: block;
   float:left;
   padding-left: 50px;
   font-size: larger;
+  color: white;
 }
 #bet{
-  margin-top: 20px;
+  margin: 20px;
 }
 img{
   width: 5%
