--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ height:fit-content ;
 display: block;
   float:left;
   padding-left: 50px;
-  font-size: larger;
+  font-size: .75rem;
   color: white;
 }
 #bet{
